# toy-tutorial

./: CMakeLists.txt  README.md
include/toy/: CMakeLists.txt  Dialect.h  ShapeInferenceInterface.h  ShapeInferenceInterface.td  ToyCombine.td  ToyOps.td
lib/: CMakeLists.txt  Dialect.cpp  LowerToAffineLoops.cpp  LowerToLLVM.cpp  MLIRGen.cpp  ShapeInferencePass.cpp  ToyCombine.cpp
tools/: CMakeLists.txt  toy-opt.cpp
